pkg/querylang/internal/query/scanner.go
//line pkg/querylang/internal/query/scanner.rl:1
package query

import (
	"fmt"
	"strconv"
	"strings"

	"github.com/i582/CodeQuery/pkg/querylang/token"
)

//line pkg/querylang/internal/query/scanner.go:15
const lexer_start int = 23
const lexer_first_final int = 23
const lexer_error int = 0

const lexer_en_main int = 23
const lexer_en_php int = 24
const lexer_en_property int = 86
const lexer_en_template_string int = 91

//line pkg/querylang/internal/query/scanner.rl:17

func initLexer(lex *Lexer) {

//line pkg/querylang/internal/query/scanner.go:31
	{
		lex.cs = lexer_start
		lex.ts = 0
		lex.te = 0
		lex.act = 0
	}

//line pkg/querylang/internal/query/scanner.rl:21
}

func (lex *Lexer) Lex() *token.Token {
	eof := lex.pe
	var tok token.ID

	tkn := lex.tokenPool.Get()

	lblStart := 0
	lblEnd := 0

	_, _ = lblStart, lblEnd

//line pkg/querylang/internal/query/scanner.go:54
	{
		var _widec int16
		if (lex.p) == (lex.pe) {
			goto _test_eof
		}
		goto _resume

	_again:
		switch lex.cs {
		case 23:
			goto st23
		case 24:
			goto st24
		case 25:
			goto st25
		case 26:
			goto st26
		case 1:
			goto st1
		case 27:
			goto st27
		case 28:
			goto st28
		case 2:
			goto st2
		case 3:
			goto st3
		case 4:
			goto st4
		case 5:
			goto st5
		case 29:
			goto st29
		case 6:
			goto st6
		case 7:
			goto st7
		case 30:
			goto st30
		case 31:
			goto st31
		case 32:
			goto st32
		case 33:
			goto st33
		case 34:
			goto st34
		case 8:
			goto st8
		case 9:
			goto st9
		case 35:
			goto st35
		case 10:
			goto st10
		case 36:
			goto st36
		case 11:
			goto st11
		case 12:
			goto st12
		case 13:
			goto st13
		case 37:
			goto st37
		case 38:
			goto st38
		case 39:
			goto st39
		case 14:
			goto st14
		case 15:
			goto st15
		case 40:
			goto st40
		case 16:
			goto st16
		case 41:
			goto st41
		case 17:
			goto st17
		case 42:
			goto st42
		case 43:
			goto st43
		case 44:
			goto st44
		case 45:
			goto st45
		case 46:
			goto st46
		case 47:
			goto st47
		case 48:
			goto st48
		case 49:
			goto st49
		case 50:
			goto st50
		case 51:
			goto st51
		case 52:
			goto st52
		case 53:
			goto st53
		case 54:
			goto st54
		case 55:
			goto st55
		case 56:
			goto st56
		case 57:
			goto st57
		case 58:
			goto st58
		case 59:
			goto st59
		case 60:
			goto st60
		case 61:
			goto st61
		case 62:
			goto st62
		case 63:
			goto st63
		case 64:
			goto st64
		case 65:
			goto st65
		case 66:
			goto st66
		case 67:
			goto st67
		case 68:
			goto st68
		case 69:
			goto st69
		case 70:
			goto st70
		case 71:
			goto st71
		case 72:
			goto st72
		case 73:
			goto st73
		case 74:
			goto st74
		case 18:
			goto st18
		case 19:
			goto st19
		case 20:
			goto st20
		case 21:
			goto st21
		case 75:
			goto st75
		case 76:
			goto st76
		case 77:
			goto st77
		case 78:
			goto st78
		case 79:
			goto st79
		case 80:
			goto st80
		case 81:
			goto st81
		case 82:
			goto st82
		case 83:
			goto st83
		case 84:
			goto st84
		case 85:
			goto st85
		case 86:
			goto st86
		case 87:
			goto st87
		case 88:
			goto st88
		case 22:
			goto st22
		case 89:
			goto st89
		case 90:
			goto st90
		case 91:
			goto st91
		case 0:
			goto st0
		}

		if (lex.p)++; (lex.p) == (lex.pe) {
			goto _test_eof
		}
	_resume:
		switch lex.cs {
		case 23:
			goto st_case_23
		case 24:
			goto st_case_24
		case 25:
			goto st_case_25
		case 26:
			goto st_case_26
		case 1:
			goto st_case_1
		case 27:
			goto st_case_27
		case 28:
			goto st_case_28
		case 2:
			goto st_case_2
		case 3:
			goto st_case_3
		case 4:
			goto st_case_4
		case 5:
			goto st_case_5
		case 29:
			goto st_case_29
		case 6:
			goto st_case_6
		case 7:
			goto st_case_7
		case 30:
			goto st_case_30
		case 31:
			goto st_case_31
		case 32:
			goto st_case_32
		case 33:
			goto st_case_33
		case 34:
			goto st_case_34
		case 8:
			goto st_case_8
		case 9:
			goto st_case_9
		case 35:
			goto st_case_35
		case 10:
			goto st_case_10
		case 36:
			goto st_case_36
		case 11:
			goto st_case_11
		case 12:
			goto st_case_12
		case 13:
			goto st_case_13
		case 37:
			goto st_case_37
		case 38:
			goto st_case_38
		case 39:
			goto st_case_39
		case 14:
			goto st_case_14
		case 15:
			goto st_case_15
		case 40:
			goto st_case_40
		case 16:
			goto st_case_16
		case 41:
			goto st_case_41
		case 17:
			goto st_case_17
		case 42:
			goto st_case_42
		case 43:
			goto st_case_43
		case 44:
			goto st_case_44
		case 45:
			goto st_case_45
		case 46:
			goto st_case_46
		case 47:
			goto st_case_47
		case 48:
			goto st_case_48
		case 49:
			goto st_case_49
		case 50:
			goto st_case_50
		case 51:
			goto st_case_51
		case 52:
			goto st_case_52
		case 53:
			goto st_case_53
		case 54:
			goto st_case_54
		case 55:
			goto st_case_55
		case 56:
			goto st_case_56
		case 57:
			goto st_case_57
		case 58:
			goto st_case_58
		case 59:
			goto st_case_59
		case 60:
			goto st_case_60
		case 61:
			goto st_case_61
		case 62:
			goto st_case_62
		case 63:
			goto st_case_63
		case 64:
			goto st_case_64
		case 65:
			goto st_case_65
		case 66:
			goto st_case_66
		case 67:
			goto st_case_67
		case 68:
			goto st_case_68
		case 69:
			goto st_case_69
		case 70:
			goto st_case_70
		case 71:
			goto st_case_71
		case 72:
			goto st_case_72
		case 73:
			goto st_case_73
		case 74:
			goto st_case_74
		case 18:
			goto st_case_18
		case 19:
			goto st_case_19
		case 20:
			goto st_case_20
		case 21:
			goto st_case_21
		case 75:
			goto st_case_75
		case 76:
			goto st_case_76
		case 77:
			goto st_case_77
		case 78:
			goto st_case_78
		case 79:
			goto st_case_79
		case 80:
			goto st_case_80
		case 81:
			goto st_case_81
		case 82:
			goto st_case_82
		case 83:
			goto st_case_83
		case 84:
			goto st_case_84
		case 85:
			goto st_case_85
		case 86:
			goto st_case_86
		case 87:
			goto st_case_87
		case 88:
			goto st_case_88
		case 22:
			goto st_case_22
		case 89:
			goto st_case_89
		case 90:
			goto st_case_90
		case 91:
			goto st_case_91
		case 0:
			goto st_case_0
		}
		goto st_out
	tr44:
		lex.cs = 23
//line pkg/querylang/internal/query/scanner.rl:120
		lex.te = (lex.p) + 1
		{
			lex.cs = 24
			lex.ungetCnt(1)
		}
		goto _again
	st23:
//line NONE:1
		lex.ts = 0

		if (lex.p)++; (lex.p) == (lex.pe) {
			goto _test_eof23
		}
	st_case_23:
//line NONE:1
		lex.ts = (lex.p)

//line pkg/querylang/internal/query/scanner.go:461
		goto tr44
	tr0:
//line pkg/querylang/internal/query/scanner.rl:127
		(lex.p) = (lex.te) - 1
		{
			lex.addFreeFloatingToken(tkn, token.T_WHITESPACE, lex.ts, lex.te)
		}
		goto st24
	tr2:
//line NONE:1
		switch lex.act {
		case 3:
			{
				(lex.p) = (lex.te) - 1
				lex.setTokenPos(tkn)
				tok = token.T_DNUMBER
				{
					(lex.p)++
					lex.cs = 24
					goto _out
				}
			}
		case 4:
			{
				(lex.p) = (lex.te) - 1

				s := strings.ReplaceAll(string(lex.data[lex.ts+2:lex.te]), "_", "")
				_, err := strconv.ParseInt(s, 2, 0)

				if err == nil {
					lex.setTokenPos(tkn)
					tok = token.T_LNUMBER
					{
						(lex.p)++
						lex.cs = 24
						goto _out
					}
				}

				lex.setTokenPos(tkn)
				tok = token.T_DNUMBER
				{
					(lex.p)++
					lex.cs = 24
					goto _out
				}
			}
		case 5:
			{
				(lex.p) = (lex.te) - 1

				base := 10
				if lex.data[lex.ts] == '0' {
					base = 8
				}

				s := strings.ReplaceAll(string(lex.data[lex.ts:lex.te]), "_", "")
				_, err := strconv.ParseInt(s, base, 0)

				if err == nil {
					lex.setTokenPos(tkn)
					tok = token.T_LNUMBER
					{
						(lex.p)++
						lex.cs = 24
						goto _out
					}
				}

				lex.setTokenPos(tkn)
				tok = token.T_DNUMBER
				{
					(lex.p)++
					lex.cs = 24
					goto _out
				}
			}
		case 6:
			{
				(lex.p) = (lex.te) - 1

				s := strings.ReplaceAll(string(lex.data[lex.ts+2:lex.te]), "_", "")
				_, err := strconv.ParseInt(s, 16, 0)

				if err == nil {
					lex.setTokenPos(tkn)
					tok = token.T_LNUMBER
					{
						(lex.p)++
						lex.cs = 24
						goto _out
					}
				}

				lex.setTokenPos(tkn)
				tok = token.T_DNUMBER
				{
					(lex.p)++
					lex.cs = 24
					goto _out
				}
			}
		case 7:
			{
				(lex.p) = (lex.te) - 1

				s := strings.ReplaceAll(string(lex.data[lex.ts+2:lex.te]), "_", "")
				_, err := strconv.ParseInt(s, 8, 0)

				if err == nil {
					lex.setTokenPos(tkn)
					tok = token.T_LNUMBER
					{
						(lex.p)++
						lex.cs = 24
						goto _out
					}
				}

				lex.setTokenPos(tkn)
				tok = token.T_DNUMBER
				{
					(lex.p)++
					lex.cs = 24
					goto _out
				}
			}
		case 14:
			{
				(lex.p) = (lex.te) - 1
				lex.setTokenPos(tkn)
				tok = token.T_SELECT
				{
					(lex.p)++
					lex.cs = 24
					goto _out
				}
			}
		case 15:
			{
				(lex.p) = (lex.te) - 1
				lex.setTokenPos(tkn)
				tok = token.T_FROM
				{
					(lex.p)++
					lex.cs = 24
					goto _out
				}
			}
		case 16:
			{
				(lex.p) = (lex.te) - 1
				lex.setTokenPos(tkn)
				tok = token.T_WHERE
				{
					(lex.p)++
					lex.cs = 24
					goto _out
				}
			}
		case 17:
			{
				(lex.p) = (lex.te) - 1
				lex.setTokenPos(tkn)
				tok = token.T_WITH
				{
					(lex.p)++
					lex.cs = 24
					goto _out
				}
			}
		case 18:
			{
				(lex.p) = (lex.te) - 1
				lex.setTokenPos(tkn)
				tok = token.T_AND
				{
					(lex.p)++
					lex.cs = 24
					goto _out
				}
			}
		case 20:
			{
				(lex.p) = (lex.te) - 1
				lex.setTokenPos(tkn)
				tok = token.T_NOT
				{
					(lex.p)++
					lex.cs = 24
					goto _out
				}
			}
		case 21:
			{
				(lex.p) = (lex.te) - 1
				lex.setTokenPos(tkn)
				tok = token.T_COUNT
				{
					(lex.p)++
					lex.cs = 24
					goto _out
				}
			}
		case 22:
			{
				(lex.p) = (lex.te) - 1
				lex.setTokenPos(tkn)
				tok = token.T_LIMIT
				{
					(lex.p)++
					lex.cs = 24
					goto _out
				}
			}
		case 23:
			{
				(lex.p) = (lex.te) - 1
				lex.setTokenPos(tkn)
				tok = token.T_OFFSET
				{
					(lex.p)++
					lex.cs = 24
					goto _out
				}
			}
		case 24:
			{
				(lex.p) = (lex.te) - 1
				lex.setTokenPos(tkn)
				tok = token.T_DESC
				{
					(lex.p)++
					lex.cs = 24
					goto _out
				}
			}
		case 25:
			{
				(lex.p) = (lex.te) - 1
				lex.setTokenPos(tkn)
				tok = token.T_ASC
				{
					(lex.p)++
					lex.cs = 24
					goto _out
				}
			}
		case 32:
			{
				(lex.p) = (lex.te) - 1
				lex.setTokenPos(tkn)
				tok = token.T_STRING
				{
					(lex.p)++
					lex.cs = 24
					goto _out
				}
			}
		case 33:
			{
				(lex.p) = (lex.te) - 1

				c := lex.data[lex.p]
				lex.error(fmt.Sprintf("WARNING: Unexpected character in input: '%c' (ASCII=%d)", c, c))
			}
		}

		goto st24
	tr5:
//line pkg/querylang/internal/query/scanner.rl:200
		lex.te = (lex.p) + 1
		{
			lex.setTokenPos(tkn)
			tok = token.T_CONSTANT_STRING
			{
				(lex.p)++
				lex.cs = 24
				goto _out
			}
		}
		goto st24
	tr9:
//line pkg/querylang/internal/query/scanner.rl:231
		(lex.p) = (lex.te) - 1
		{
			c := lex.data[lex.p]
			lex.error(fmt.Sprintf("WARNING: Unexpected character in input: '%c' (ASCII=%d)", c, c))
		}
		goto st24
	tr15:
//line pkg/querylang/internal/query/scanner.rl:129
		(lex.p) = (lex.te) - 1
		{
			lex.setTokenPos(tkn)
			tok = token.T_DNUMBER
			{
				(lex.p)++
				lex.cs = 24
				goto _out
			}
		}
		goto st24
	tr17:
//line pkg/querylang/internal/query/scanner.rl:223
		(lex.p) = (lex.te) - 1
		{
			lex.setTokenPos(tkn)
			tok = token.ID(int(lex.data[lex.ts]))
			{
				(lex.p)++
				lex.cs = 24
				goto _out
			}
		}
		goto st24
	tr26:
//line pkg/querylang/internal/query/scanner.rl:210
		lex.te = (lex.p) + 1
		{
			isDocComment := false
			if lex.te-lex.ts > 4 && string(lex.data[lex.ts:lex.ts+3]) == "/**" {
				isDocComment = true
			}

			if isDocComment {
				lex.addFreeFloatingToken(tkn, token.T_DOC_COMMENT, lex.ts, lex.te)
			} else {
				lex.addFreeFloatingToken(tkn, token.T_COMMENT, lex.ts, lex.te)
			}
		}
		goto st24
	tr27:
//line pkg/querylang/internal/query/scanner.rl:140
		(lex.p) = (lex.te) - 1
		{
			base := 10
			if lex.data[lex.ts] == '0' {
				base = 8
			}

			s := strings.ReplaceAll(string(lex.data[lex.ts:lex.te]), "_", "")
			_, err := strconv.ParseInt(s, base, 0)

			if err == nil {
				lex.setTokenPos(tkn)
				tok = token.T_LNUMBER
				{
					(lex.p)++
					lex.cs = 24
					goto _out
				}
			}

			lex.setTokenPos(tkn)
			tok = token.T_DNUMBER
			{
				(lex.p)++
				lex.cs = 24
				goto _out
			}
		}
		goto st24
	tr32:
//line pkg/querylang/internal/query/scanner.rl:229
		(lex.p) = (lex.te) - 1
		{
			lex.setTokenPos(tkn)
			tok = token.T_STRING
			{
				(lex.p)++
				lex.cs = 24
				goto _out
			}
		}
		goto st24
	tr41:
//line pkg/querylang/internal/query/scanner.rl:196
		lex.te = (lex.p) + 1
		{
			lex.setTokenPos(tkn)
			tok = token.T_ORDER_BY
			{
				(lex.p)++
				lex.cs = 24
				goto _out
			}
		}
		goto st24
	tr45:
//line pkg/querylang/internal/query/scanner.rl:231
		lex.te = (lex.p) + 1
		{
			c := lex.data[lex.p]
			lex.error(fmt.Sprintf("WARNING: Unexpected character in input: '%c' (ASCII=%d)", c, c))
		}
		goto st24
	tr48:
//line pkg/querylang/internal/query/scanner.rl:223
		lex.te = (lex.p) + 1
		{
			lex.setTokenPos(tkn)
			tok = token.ID(int(lex.data[lex.ts]))
			{
				(lex.p)++
				lex.cs = 24
				goto _out
			}
		}
		goto st24
	tr56:
//line pkg/querylang/internal/query/scanner.rl:176
		lex.te = (lex.p) + 1
		{
			lex.setTokenPos(tkn)
			tok = token.T_EQUAL
			{
				(lex.p)++
				lex.cs = 24
				goto _out
			}
		}
		goto st24
	tr69:
//line pkg/querylang/internal/query/scanner.rl:127
		lex.te = (lex.p)
		(lex.p)--
		{
			lex.addFreeFloatingToken(tkn, token.T_WHITESPACE, lex.ts, lex.te)
		}
		goto st24
	tr71:
//line pkg/querylang/internal/query/scanner.rl:47

//line pkg/querylang/internal/query/scanner.rl:127
		lex.te = (lex.p)
		(lex.p)--
		{
			lex.addFreeFloatingToken(tkn, token.T_WHITESPACE, lex.ts, lex.te)
		}
		goto st24
	tr75:
//line pkg/querylang/internal/query/scanner.rl:231
		lex.te = (lex.p)
		(lex.p)--
		{
			c := lex.data[lex.p]
			lex.error(fmt.Sprintf("WARNING: Unexpected character in input: '%c' (ASCII=%d)", c, c))
		}
		goto st24
	tr76:
//line pkg/querylang/internal/query/scanner.rl:223
		lex.te = (lex.p)
		(lex.p)--
		{
			lex.setTokenPos(tkn)
			tok = token.ID(int(lex.data[lex.ts]))
			{
				(lex.p)++
				lex.cs = 24
				goto _out
			}
		}
		goto st24
	tr78:
//line pkg/querylang/internal/query/scanner.rl:206
		lex.te = (lex.p)
		(lex.p)--
		{
			lex.addFreeFloatingToken(tkn, token.T_COMMENT, lex.ts, lex.te)
		}
		goto st24
	tr81:
//line pkg/querylang/internal/query/scanner.rl:47

//line pkg/querylang/internal/query/scanner.rl:206
		lex.te = (lex.p)
		(lex.p)--
		{
			lex.addFreeFloatingToken(tkn, token.T_COMMENT, lex.ts, lex.te)
		}
		goto st24
	tr85:
		lex.cs = 24
//line pkg/querylang/internal/query/scanner.rl:198
		lex.te = (lex.p)
		(lex.p)--
		{
			lex.setTokenPos(tkn)
			tok = token.T_OBJECT_OPERATOR
			lex.cs = 86
			{
				(lex.p)++
				goto _out
			}
		}
		goto _again
	tr86:
//line pkg/querylang/internal/query/scanner.rl:129
		lex.te = (lex.p)
		(lex.p)--
		{
			lex.setTokenPos(tkn)
			tok = token.T_DNUMBER
			{
				(lex.p)++
				lex.cs = 24
				goto _out
			}
		}
		goto st24
	tr89:
//line pkg/querylang/internal/query/scanner.rl:140
		lex.te = (lex.p)
		(lex.p)--
		{
			base := 10
			if lex.data[lex.ts] == '0' {
				base = 8
			}

			s := strings.ReplaceAll(string(lex.data[lex.ts:lex.te]), "_", "")
			_, err := strconv.ParseInt(s, base, 0)

			if err == nil {
				lex.setTokenPos(tkn)
				tok = token.T_LNUMBER
				{
					(lex.p)++
					lex.cs = 24
					goto _out
				}
			}

			lex.setTokenPos(tkn)
			tok = token.T_DNUMBER
			{
				(lex.p)++
				lex.cs = 24
				goto _out
			}
		}
		goto st24
	tr95:
//line pkg/querylang/internal/query/scanner.rl:130
		lex.te = (lex.p)
		(lex.p)--
		{
			s := strings.ReplaceAll(string(lex.data[lex.ts+2:lex.te]), "_", "")
			_, err := strconv.ParseInt(s, 2, 0)

			if err == nil {
				lex.setTokenPos(tkn)
				tok = token.T_LNUMBER
				{
					(lex.p)++
					lex.cs = 24
					goto _out
				}
			}

			lex.setTokenPos(tkn)
			tok = token.T_DNUMBER
			{
				(lex.p)++
				lex.cs = 24
				goto _out
			}
		}
		goto st24
	tr96:
//line pkg/querylang/internal/query/scanner.rl:165
		lex.te = (lex.p)
		(lex.p)--
		{
			s := strings.ReplaceAll(string(lex.data[lex.ts+2:lex.te]), "_", "")
			_, err := strconv.ParseInt(s, 8, 0)

			if err == nil {
				lex.setTokenPos(tkn)
				tok = token.T_LNUMBER
				{
					(lex.p)++
					lex.cs = 24
					goto _out
				}
			}

			lex.setTokenPos(tkn)
			tok = token.T_DNUMBER
			{
				(lex.p)++
				lex.cs = 24
				goto _out
			}
		}
		goto st24
	tr97:
//line pkg/querylang/internal/query/scanner.rl:155
		lex.te = (lex.p)
		(lex.p)--
		{
			s := strings.ReplaceAll(string(lex.data[lex.ts+2:lex.te]), "_", "")
			_, err := strconv.ParseInt(s, 16, 0)

			if err == nil {
				lex.setTokenPos(tkn)
				tok = token.T_LNUMBER
				{
					(lex.p)++
					lex.cs = 24
					goto _out
				}
			}

			lex.setTokenPos(tkn)
			tok = token.T_DNUMBER
			{
				(lex.p)++
				lex.cs = 24
				goto _out
			}
		}
		goto st24
	tr98:
//line pkg/querylang/internal/query/scanner.rl:178
		lex.te = (lex.p)
		(lex.p)--
		{
			lex.setTokenPos(tkn)
			tok = token.T_SMALLER
			{
				(lex.p)++
				lex.cs = 24
				goto _out
			}
		}
		goto st24
	tr99:
//line pkg/querylang/internal/query/scanner.rl:180
		lex.te = (lex.p) + 1
		{
			lex.setTokenPos(tkn)
			tok = token.T_SMALLER_OR_EQUAL
			{
				(lex.p)++
				lex.cs = 24
				goto _out
			}
		}
		goto st24
	tr100:
//line pkg/querylang/internal/query/scanner.rl:177
		lex.te = (lex.p) + 1
		{
			lex.setTokenPos(tkn)
			tok = token.T_NOT_EQUAL
			{
				(lex.p)++
				lex.cs = 24
				goto _out
			}
		}
		goto st24
	tr101:
//line pkg/querylang/internal/query/scanner.rl:179
		lex.te = (lex.p)
		(lex.p)--
		{
			lex.setTokenPos(tkn)
			tok = token.T_GREATER
			{
				(lex.p)++
				lex.cs = 24
				goto _out
			}
		}
		goto st24
	tr102:
//line pkg/querylang/internal/query/scanner.rl:181
		lex.te = (lex.p) + 1
		{
			lex.setTokenPos(tkn)
			tok = token.T_GREATER_OR_EQUAL
			{
				(lex.p)++
				lex.cs = 24
				goto _out
			}
		}
		goto st24
	tr103:
//line pkg/querylang/internal/query/scanner.rl:229
		lex.te = (lex.p)
		(lex.p)--
		{
			lex.setTokenPos(tkn)
			tok = token.T_STRING
			{
				(lex.p)++
				lex.cs = 24
				goto _out
			}
		}
		goto st24
	tr130:
//line pkg/querylang/internal/query/scanner.rl:188
		lex.te = (lex.p)
		(lex.p)--
		{
			lex.setTokenPos(tkn)
			tok = token.T_OR
			{
				(lex.p)++
				lex.cs = 24
				goto _out
			}
		}
		goto st24
	st24:
//line NONE:1
		lex.ts = 0

		if (lex.p)++; (lex.p) == (lex.pe) {
			goto _test_eof24
		}
	st_case_24:
//line NONE:1
		lex.ts = (lex.p)
